Fixed host file

--- a/config/hosts/SNIC/dardel/login1.hsn.dardel.pdc.kth.se.conf
+++ b/config/hosts/SNIC/dardel/login1.hsn.dardel.pdc.kth.se.conf
@@ -12,7 +12,7 @@
 #       FFLAGS+= -mcmodel=large
 #       FFLAGS+= -fbacktrace
 #        FFLAGS_DOUBLE=-fdefault-real-8 -fdefault-double-8
-        CFLAGS+=-O3 -DFUNDERSC=1
+        CFLAGS+=-O3
         CFLAGS+= -mcmodel=large
         ALLOW_ARG_MISMATCH = -fallow-argument-mismatch
 %endsection Makefile
