Python: pytest.ini: insert newlines

--- a/python/tests/pytest.ini
+++ b/python/tests/pytest.ini
@@ -1,5 +1,12 @@
 [pytest]
-python_files = read.py read_hdf5.py imports.py basics.py manual.py derivatives.py pc_io.py
+python_files =
+    read.py
+    read_hdf5.py
+    imports.py
+    basics.py
+    manual.py
+    derivatives.py
+    pc_io.py
 pythonpath = ".."
 addopts = "--strict-markers"
 markers =
