Python: pytest.ini: enable newly added file

--- a/python/tests/pytest.ini
+++ b/python/tests/pytest.ini
@@ -7,6 +7,7 @@ python_files =
     manual.py
     derivatives.py
     pc_io.py
+    script_autotests.py
 pythonpath = ".."
 addopts = "--strict-markers"
 markers =
