MR: external sources revised; removed whitespace

--- a/src/astaroth/Makefile
+++ b/src/astaroth/Makefile
@@ -55,14 +55,16 @@ OBJECTS = $(SOURCES:.cc=.o)
 
 #DSL_MODULE_DIR=samples/gputest
 DSL_MODULE_DIR = ../../DSL/local
-EXT_SOURCES = $(wildcard ../../DSL/*/*.h)
+#EXT_SOURCES = $(wildcard ../../DSL/stdlib/*/*.h)   #doesn't work with symbolic links
+CWD = $(PWD)
+EXT_KERNELS =
 
 ifeq ($(CMAKE_SINGLEPASS),ON)
   DSL_MODULE_FILE = solve_single.ac
-  #EXT_SOURCES += ../../DSL/local/solve_single.ac
+  EXT_KERNELS += $(CWD)/DSL/local/solve_single.ac
 else
   DSL_MODULE_FILE = solve_two.ac
-  #EXT_SOURCES += ../../DSL/local/solve_two.ac
+  EXT_KERNELS += $(CWD)/DSL/local/solve_two.ac
 endif
 #
 ifneq ($(filter shock,$(MODULESOURCES)),)
@@ -102,7 +104,6 @@ endif
 CMAKE_BUILD_TYPE          ?= Debug
 SUPPRESS_COMPILER_WARNINGS ?= off
 
-
 astaroth_$(PREC).so: $(SOURCES) forcing.h $(AC_HEADERS) $(PC_HEADERS) $(CHEADERS) astaroth_libs
 	mkdir -p build && \
 	echo USE_HIP=$(USE_HIP) && \
@@ -127,7 +128,13 @@ CMAKE_OPTIONS = -DMULTIGPU_ENABLED=OFF -DMPI_ENABLED=$(CMAKE_MPI) -DBUILD_SHARED
 		-DVERBOSE=off -DOPTIMIZE_INPUT_PARAMS=$(OPTIMIZE_INPUT_PARAMS) -DOPTIMIZE_MEM_ACCESSES=ON -DOPTIMIZE_ARRAYS=$(RUNTIME_COMPILATION) -DCMAKE_BUILD_TYPE=$(CMAKE_BUILD_TYPE) \
 	        -DBUILD_STANDALONE=OFF -DOPTIMIZE_FIELDS=$(TRANSPILATION) -DALLOW_DEAD_VARIABLES=$(RUNTIME_COMPILATION) -DELIMINATE_CONDITIONALS=$(ELIMINATE_CONDITIONALS) -DBUILD_UTILS=OFF -DCMAKE_POSITION_INDEPENDENT_CODE=ON -DEXT_SOURCES=$(EXT_SOURCES) -DDSL_MODULE_FILE=$(DSL_MODULE_FILE) -DINLINING=$(INLINING) -DBUILD_ACM=OFF
 astaroth_libs: $(PC_HEADERS)
-	echo "const char* cmake_options = \"  -DDSL_MODULE_DIR=../$(DSL_MODULE_DIR)  $(CMAKE_OPTIONS)\";" > cmake_options.h
+	@ext_srcs="`ls -m $$PENCIL_HOME/src/astaroth/DSL/*/*.h \
+                          $$PENCIL_HOME/src/astaroth/DSL/*.h \
+		          $$PENCIL_HOME/src/astaroth/submodule/acc-runtime/stdlib/*.h \
+			  $$PENCIL_HOME/src/astaroth/submodule/acc-runtime/stdlib/*/*.h \
+                          $(CWD)/src/astaroth/DSL/local/*.h \
+			  |tr "\n" " "|sed -e's/, / /g'` $(EXT_KERNELS)" && \
+	echo "const char* cmake_options = \" -DEXT_SOURCES=$$ext_srcs -DDSL_MODULE_DIR=../$(DSL_MODULE_DIR) $(CMAKE_OPTIONS)\";" > cmake_options.h && \
 	mkdir -p submodule/build  && cd submodule/build && export LDFLAGS=""  &&  \
 	cmake  $(CMAKE_OPTIONS) -DDSL_MODULE_DIR=../acc-runtime/$(DSL_MODULE_DIR) -DRUNTIME_COMPILATION=$(RUNTIME_COMPILATION) -DREAD_OVERRIDES=$(READ_OVERRIDES) .. \
 	&& make -j -I../../.. VERBOSE=0 # Build the core Astaroth library
