Python: tests: pytest.ini: typo in description

--- a/python/tests/pytest.ini
+++ b/python/tests/pytest.ini
@@ -12,4 +12,4 @@ pythonpath = ".."
 addopts = "--strict-markers"
 markers =
     integration: tests that depend on stuff outside the Python module. These require sourceme.sh to have been sourced in the current shell.
-    pcautotest: tests that run pc_auto-test. These require sourceme.sh to have been sourced in the current shell. These are a subset of the integraion tests.
+    pcautotest: tests that run pc_auto-test. These require sourceme.sh to have been sourced in the current shell. These are a subset of the integration tests.
