SLD works on the GPU mostly: a slight difference to cpu and not sure is it simply order of operations or more meaningful ---> Needs qualitative testing; Small modifications to make transpilation easier

--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -3149,6 +3149,9 @@ endif
 ifeq ($(MAGNETIC_MEANFIELD),magnetic/nomeanfield)
 	@echo $(CUDA_RELPATH)'/$(MAGNETIC_MEANFIELD).f90 \' >> $(CUDA_MAKEDIR)/PC_modulesources.h
 endif
+ifeq ($(GRAVITY),nogravity)
+	@echo $(CUDA_RELPATH)'/$(GRAVITY).f90 \' >> $(CUDA_MAKEDIR)/PC_modulesources.h
+endif
 ifeq ($(MAGNETIC),nomagnetic)
 	@echo $(CUDA_RELPATH)'/$(MAGNETIC).f90 \' >> $(CUDA_MAKEDIR)/PC_modulesources.h
 endif
