MR: tauxxerr -> tauerrxx etc.; calc_diagnostics_training now also called in PC-A; pc_start no working as usual

--- a/config/compilers/separate/nvidia-fortran.conf
+++ b/config/compilers/separate/nvidia-fortran.conf
@@ -25,3 +25,7 @@
 	MODULE_SUFFIX = _
 %endsection environment
 
+%section runtime
+  mpiexec = mpiexec
+  mpiexec_opts  = --bind-to none --cpus-per-proc $OMP_NUM_THREADS
+%endsection runtime
