MR: adjusted train.h; pc_start now usable in container; minor

--- a/config/compilers/separate/nvidia-fortran.conf
+++ b/config/compilers/separate/nvidia-fortran.conf
@@ -27,5 +27,5 @@
 
 %section runtime
   mpiexec = mpiexec
-  mpiexec_opts  = --bind-to none --cpus-per-proc $OMP_NUM_THREADS
+  mpiexec_opts  = --bind-to none #--cpus-per-proc $OMP_NUM_THREADS
 %endsection runtime
