--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,4 @@
-[submodule "src/astaroth/NUMA-scheduler"]
-	path = src/astaroth/NUMA-scheduler
-	url = https://github.com/ToxPuro/NUMA-scheduler.git
 [submodule "src/astaroth/submodule"]
 	path = src/astaroth/submodule
 	url = https://bitbucket.org/jpekkila/astaroth.git
-        branch = PCinterface_2019-8-12
+        branch = develop
