MR: added missing GPU dependency

--- a/src/Makefile.depend
+++ b/src/Makefile.depend
@@ -142,7 +142,7 @@ $(HEATFLUX_OBJ): heatflux.h $(COMMON_DEPS) $(EOS_OBJ) $(SLICES_METHODS_OBJ)
 #$(HYDRO_OBJ): hydro.h hydro_omp.inc $(HYDRO_SRC) $(COMMON_DEPS) $(INITCOND_OBJ) $(INITIAL_CONDITION_OBJ) $(BOUNDCOND_OBJ) $(FARRAY_OBJ) $(BORDER_PROFILES_OBJ) $(VISCOSITY_OBJ) $(SLICES_METHODS_OBJ) $(SPECIAL_OBJ) $(GRAVITY_OBJ) $(MAGNETIC_OBJ) $(WENO_TRANSPORT_OBJ) $(DENSITY_OBJ) $(DENSITY_METHODS_OBJ) $(POISSON_OBJ) $(SGSHYDRO_OBJ)
 $(HYDRO_OBJ): hydro.h $(HYDRO_SRC) $(COMMON_DEPS) $(INITCOND_OBJ) $(INITIAL_CONDITION_OBJ) $(BOUNDCOND_OBJ) $(FARRAY_OBJ) $(BORDER_PROFILES_OBJ) $(VISCOSITY_OBJ) $(SLICES_METHODS_OBJ) $(SPECIAL_OBJ) $(GRAVITY_OBJ) $(MAGNETIC_OBJ) $(COSMICRAY_OBJ) $(WENO_TRANSPORT_OBJ) $(DENSITY_OBJ) $(DENSITY_METHODS_OBJ) $(POISSON_OBJ) $(SGSHYDRO_OBJ) $(TRAINING_OBJ)
 #
-$(RADIATION_OBJ): radiation.h $(RADIATION_SRC) $(COMMON_DEPS) $(INITCOND_OBJ) $(INITIAL_CONDITION_OBJ) $(EOS_OBJ) $(SLICES_METHODS_OBJ) $(SYSCALLS_OBJ)
+$(RADIATION_OBJ): radiation.h $(RADIATION_SRC) $(COMMON_DEPS) $(GPU_OBJ) $(INITCOND_OBJ) $(INITIAL_CONDITION_OBJ) $(EOS_OBJ) $(SLICES_METHODS_OBJ) $(SYSCALLS_OBJ)
 #
 $(COSMICRAY_OBJ): cosmicray.h $(COSMICRAY_SRC) $(COMMON_DEPS) $(INITCOND_OBJ) $(INITIAL_CONDITION_OBJ) $(SLICES_METHODS_OBJ)
 #
