MR: cuda option for helper build

--- a/config/compilers/separate/nvidia-fortran.conf
+++ b/config/compilers/separate/nvidia-fortran.conf
@@ -7,7 +7,7 @@
 	CFLAGS = -DFUNDERSC=1
 	F77 = $(FC)
 	FFLAGS += -O -cuda
-	LDFLAGS_HELPER += -Bdynamic -h -u
+	LDFLAGS_HELPER += -cuda -Bdynamic #-u -h
 	FFLAGS_DOUBLE = -r8
 	OMPFFLAGS += -mp=multicore
 	OMPLFLAGS += 
@@ -28,4 +28,5 @@
 %section runtime
   mpiexec = mpiexec
   mpiexec_opts  = --bind-to none #--cpus-per-proc $OMP_NUM_THREADS
+                                 # this doesn't work inside container, why not?
 %endsection runtime
