--- a/config/hosts/sintef/Nils-sin-MBP.sintef.no.conf
+++ b/config/hosts/sintef/Nils-sin-MBP.sintef.no.conf
@@ -10,7 +10,6 @@
 %section Makefile
         FC = gfortran
         F77 = $(FC)
-	CC = gcc
 	CFLAGS = -DFUNDERSC=1
     	CFLAGS_DOUBLE = -DDOUBLE_PRECISION	
         FFLAGS += -O -O0 -Wall -finit-real=sNaN -finit-integer=-2147483648 -g -fbacktrace -fimplicit-none -fcheck=all -ffpe-trap=invalid,zero,overflow -I/opt/homebrew/Cellar/hwloc/2.11.2/share/hwloc/tests/hwloc/ports/include/netbsd/
@@ -31,6 +30,6 @@
 %endsection environment
 
 
-#%include compilers/separate/GNU-gcc
+%include compilers/separate/GNU-gcc
 
 %include mpi/default
