initial work for plasma AI

--- a/src/astaroth/CMakeLists.txt
+++ b/src/astaroth/CMakeLists.txt
@@ -13,6 +13,8 @@ option(PACKED_DATA_TRANSFERS  "Enables kernel for packed data transfers"        
 option(SINGLEPASS_INTEGRATION "Enables single pass integration"                         OFF)
 option(RUNTIME_COMPILATION    "Enables runtime compilation"                         OFF)
 option(TRANSPILATION          "Tmp flag to make interface compatible with transpiled code"                         OFF)
+option (TRAINING							"Using torchfort"																					OFF)
+
 
 ## Project settings
 project(astaroth C CXX)
@@ -146,11 +148,24 @@ if(TRANSPILATION)
 else()
 	add_definitions(-DTRANSPILATION=0)
 endif()
+if(TRAINING)
+	add_definitions(-DTRAINING=1)
+else()
+	add_definitions(-DTRAINING=0)
+endif()
 if (PACKED_DATA_TRANSFERS)
   add_compile_options(-DPACKED_DATA_TRANSFERS=1)
   add_library(astaroth_${PREC} SHARED gpu_astaroth.cc loadStore.cc)
 else()
-  add_library(astaroth_${PREC} SHARED gpu_astaroth.cc)
+	if(TRAINING)	
+  	add_library(astaroth_${PREC} SHARED gpu_astaroth.cc torch.cc)
+		include_directories(/opt/torchfort/include/)
+		link_directories(/opt/torchfort/lib/)
+		target_link_libraries(astaroth_${PREC} /opt/torchfort/lib/libtorchfort.so)
+	else()
+ 		add_library(astaroth_${PREC} SHARED gpu_astaroth.cc)
+	endif()
 endif()
 target_link_libraries(astaroth_${PREC} astaroth_core)
+
 
