--- a/samples/1d-tests/rel-shock/start.in
+++ b/samples/1d-tests/rel-shock/start.in
@@ -21,6 +21,6 @@
 /
 &density_init_pars
   initlnrho='nolog-shock-tube', rho_left=1e-1, rho_right=1., widthlnrho=-.01
-  lrelativistic_eos=F
+  lrelativistic_eos=T  !(this used to be F for default ultrarel EOS when lrelativistic=T)
   ldensity_nolog=T
 /
