--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ cache:
 
 addons:
   apt:
-    update: true
+    update: false
 
 before_install:
   - sudo apt-get install -y gfortran libhdf5-openmpi-dev git-restore-mtime
