Update GNU compilation options on LUMI

--- a/config/hosts/lumi/host-uan01-GNU_Linux.conf
+++ b/config/hosts/lumi/host-uan01-GNU_Linux.conf
@@ -59,12 +59,12 @@
 #	FC = ftn
 #	F90 = $(FC)
 #	CC = cc
-#	FFLAGS += -O3 -g
+#	FFLAGS += -O3 -g -fPIC
 #	FFLAGS += -mcmodel=large
 #	#FFLAGS += -march=core-avx2
-#	CFLAGS += -O2 -D_GNU_SOURCE
+#	CFLAGS += -O2 -D_GNU_SOURCE -fPIC
 #	#CFLAGS += -march=core-avx2
-#       LDFLAGS += -ldl -lpthread
+#       LDFLAGS += -ldl -lpthread -Wl,--no-relax
 #%endsection Makefile
 ####GNU end
 
